--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pywfc = "0.0.0"
 colorama = "0.4.6"
 numpy = "1.26.2"
 utils = "^1.0.1"
+rapid-router = "^5.16.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
